# GOPH_419_F2025_Lab_2_stSM

./: README.md  pyproject.toml
examples/: driver.py  tests.py
src/lab02/: linalg.py
