[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "my_python_package"
version = "0.0.1"
authors = [
{ name="Stuart MacFarlane", email="stuart.macfarlane@ucalgary.ca" },
]
description="GOPH 419 lab 2"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
"numpy",
"matplotlib",
"scipy",
]
classifiers = [
"Programming Language :: Python :: 3",
"Operating System :: OS Independent",
"License :: OSI Approved :: GNU General Public License v3",
]
[project.urls]
"Homepage" = "https://github.com/Stuart-B-MacFarlane/GOPH_419_F2025_Lab_2_stSM"